--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,14 +7,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
-
     <title>Pseudocode Compiler</title>
-
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel='stylesheet' href='/css/style.css' />
-    
-    <script src="js/bootstrap.min.js"></script>
 
     <!-- Custom styles for this template -->
 
@@ -23,10 +19,40 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- Rapydscript stuff -->
+    <script src=rapyd/codemirror/lib/codemirror.js></script>
+    <script src=rapyd/codemirror/mode/python/python.js></script>
+    <script src=rapyd/codemirror/mode/javascript/javascript.js></script>
+    <link rel=stylesheet href=rapyd/codemirror/lib/codemirror.css>
+    <style type=text/css>
+      .CodeMirror {
+        border: 1px solid black;
+        height: 100%;
+        width: 49.5%;
+        float: left;
+      }
+      .cm-s-output {
+        border-left: 1px;
+      }
+      .page {
+        position: absolute;
+        top: 50px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
+      .fl {
+        float: left;
+      }
+    </style>
+    <script type="text/javascript" src="rapyd/rapydscript/lib/utils.js"></script>
+    <script type="text/javascript" src="rapyd/rapydscript/lib/ast.js"></script>
+    <script type="text/javascript" src="rapyd/rapydscript/lib/baselib.js"></script>
+    <script type="text/javascript" src="rapyd/rapydscript/lib/output.js"></script>
+    <script type="text/javascript" src="rapyd/rapydscript/lib/parse.js"></script>
+    <script type="text/javascript" src="rapyd/importer.js"></script>
   </head>
-
   <body>
-
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -46,21 +72,72 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
+    
+    <div class="page">
+      <textarea id=code name=code>
+def factorial(n):
+  if n == 0:
+    return 1
+  return n * factorial(n-1)
+      </textarea>
+      <textarea class=output id=preview></textarea>
+    </div>
 
-    <div class="container">
+    <script>
+      var delay;
+      // Initialize CodeMirror editor with a nice html5 canvas demo.
+      var editor = CodeMirror.fromTextArea(document.getElementById('code'), {
+        mode: 'text',
+        indentUnit: 4,
+        lineNumbers: true,
+        autofocus: true,
+      });
+      var preview = CodeMirror.fromTextArea(document.getElementById('preview'), {
+        mode: 'text/javascript',
+        lineNumbers: true,
+        theme: "default output",
+        //readOnly: true
+      });
 
-      <div class="info">
-        <h1>Pseudocode Compiler</h1>
-        <p class="lead">Type in pseudocode, and we'll output Javascript!</p>
-      </div>
+      editor.on("change", function() {
+        clearTimeout(delay);
+        delay = setTimeout(function(){updatePreview(false);}, 500);
+      });
 
-    </div><!-- /.container -->
+      //RapydScript options
+      var rs_options = {
+        "filename":"demo",
+        "toplevel":null,
+        "basedir": null,
+        "libdir": null
+      };
+      var output_opts = {
+        "beautify":true,
+        "private_scope":false,
+        "omit_baselib":true
+      };
 
+      function updatePreview(from_error) {
+        var rapydscript_string = editor.getValue();
+        output = OutputStream(output_opts)
+        rapydscript_string += '\n'; //just to be safe
+        try {
+          TOPLEVEL = parse(rapydscript_string, rs_options);
+          TOPLEVEL.print(output);
+          preview.setValue(String(output) + '\n');
+        } catch(err) {
+          if (from_error) {
+              preview.setValue("ERROR: " + err.message + ". Line " + err.line + ", column " + err.col + ".");
+          } else {
+            clearTimeout(delay);
+            delay = setTimeout(function(){updatePreview(true);}, 2000);
+          }
+        }
+      }
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+      updatePreview();
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
