--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,6 +74,7 @@ def factorial(n):
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/converter.js"></script>
     <script>
       var js = '';
       var editor = CodeMirror.fromTextArea(document.getElementById('code'), {
@@ -108,7 +109,7 @@ def factorial(n):
       };
 
       function updatePreview(from_error) {
-        var rapydscript_string = editor.getValue();
+        var rapydscript_string = change(editor.getValue());
         output = OutputStream(output_opts)
         rapydscript_string += '\n'; //just to be safe
         try {
