--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,6 +112,7 @@ def factorial(n):
         var rapydscript_string = change(editor.getValue());
         output = OutputStream(output_opts)
         rapydscript_string += '\n'; //just to be safe
+        alert(rapydscript_string);
         try {
           TOPLEVEL = parse(rapydscript_string, rs_options);
           TOPLEVEL.print(output);
