made better example

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,9 +58,11 @@
     <div class="row" id="textareas">
       <textarea id=code name=code>
 def factorial(n):
-  if n == 0:
+  if n is equal to 0:
     return 1
-  return n * factorial(n-1)
+  return n times factorial(n minus 1)
+
+factorial(5 plus 6) - 266
       </textarea>
       <textarea class=output id=preview></textarea>
     </div>
