--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,8 +62,7 @@ def factorial(n):
     return 1
   return n times factorial(n minus 1)
 
-factorial(5 plus 6) - 266
-      </textarea>
+factorial(5 plus 6) - 266</textarea>
       <textarea class=output id=preview></textarea>
     </div>
     <div class="row button-row">
