Made the sample slightly cooler

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,12 +57,12 @@
     </div>
     <div class="row" id="textareas">
       <textarea id=code name=code>
-def factorial of n :
-	if n is equal to 0:
+define a new function factorial of n 
+	if n is equal to 0
 		return 1
-	return n times factorial(n minus 1)
+	return n times factorial of (n minus 1)
 
-factorial(5 plus 6) - 266</textarea>
+factorial of (5 plus 6) - 266</textarea>
       <textarea class=output id=preview></textarea>
     </div>
     <div class="row button-row">
