--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,7 +111,7 @@ factorial of (5 plus 6) - 266</textarea>
         var rapydscript_string = change(editor.getValue());
         output = OutputStream(output_opts)
         rapydscript_string += '\n'; //just to be safe
-        alert(rapydscript_string);
+        //alert(rapydscript_string);
         try {
           TOPLEVEL = parse(rapydscript_string, rs_options);
           TOPLEVEL.print(output);
