--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,16 @@ define a new function factorial of n
 	return n times factorial of (n minus 1)
 
 factorial of (5 plus 6) - 266</textarea>
-      <textarea class=output id=preview></textarea>
+      <textarea class=output id=preview>
+function factorial(n) {
+    if (n == 0) {
+        return 1;
+    }
+    return n * factorial(n - 1);
+}
+
+factorial(5 + 6) - 266;
+      </textarea>
     </div>
     <div class="row button-row">
       <input type="button" class="btn btn-lg btn-primary" id="runit" value="Run Javascript">
