--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="row button-row">
-      <input type="button" class="btn btn-lg btn-primary" id="compileit" value="Compile to Javascript">
+      <input type="button" class="btn btn-lg btn-primary" id="compileit" value="Compiled">
     </div>
     <div class="row" id="textareas">
       <textarea id=code name=code>
