--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,7 +138,7 @@
 	}
       function giveurl(){
 	  var socket = io.connect('http://localhost');//fix this later I assume
-    	  socket.emit('url', { url: editor.getValue() });
+    	  socket.emit('url', { url: editor.getValue() });//make it so they can't save infinite amounts to our server
 	  alert("http://localhost:3000/"+hashCode(editor.getValue()));
 	
       }
