--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,6 +63,7 @@
       <textarea id=code name=code > <%= start %>
 </textarea>
       <textarea class=output id=preview>
+      print("hello world");
       </textarea>
     </div>
     <div class="row button-row">
@@ -129,8 +130,7 @@
       
       
       var timeout;
-      
-      alert("here1");
+
       window.addEventListener("keyup", keyedUp, false);
       window.addEventListener("keydown", keyedDown, false);
       
