--- a/views/index.ejs
+++ b/views/index.ejs
@@ -140,7 +140,7 @@
           return(2*a);           
       }
       function geturl(){
-        var socket = io.connect('http://localhost');//fix this later I assume
+        var socket = io.connect('http://wordyscript.herokuapp.com');//fix this later I assume
     	  socket.emit('url', { url: editor.getValue() });//make it so they can't save infinite amounts to our server
         bootstrap_alert.warning("http://wordyscript.heroku.com/"+hashCode(editor.getValue()));
       }
