--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
-    <title>Pseudocode Compiler</title>
+    <title>WordyScript</title>
     <!-- Bootstrap core CSS -->
     <link rel='stylesheet' href='/css/style.css' />
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Pseudocode Compiler</a>
+          <a class="navbar-brand" href="/">WordyScript</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
