--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="https://github.com/namlede/encompile">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
