--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
         $('#alert-placeholder').html('<div class="alert alert-info alert-dismissable fade in"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><span>'+message+'</span></div>');
       }
       var editor = CodeMirror.fromTextArea(document.getElementById('code'), {
-        mode: 'text',
+        mode: 'text/x-python',
         indentUnit: 4,
         lineNumbers: true,
         autofocus: true,
