--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="/images/icon.png">
     <title>WordyScript</title>
     <!-- Bootstrap core CSS -->
     <link rel='stylesheet' href='/css/style.css' />
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="https://github.com/namlede/encompile">About</a></li>
+            <li><a href="https://github.com/namlede/encompile#wordyscript">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
