--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 body {
+	background-image: url("/images/background.jpg");
   padding: 50px 50px 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
