changed Javascript to JavaScript

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
       </textarea>
     </div>
     <div class="row button-row">
-      <input type="button" class="btn btn-lg btn-primary" id="runit" value="Run Javascript">
+      <input type="button" class="btn btn-lg btn-primary" id="runit" value="Run JavaScript">
     </div>
     <div class "row">
       <div id='console-wrapper'>
