--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,8 +60,8 @@
       </div>
     </div>
     <div class="row button-row">
-      <input type="button" class="btn btn-lg btn-primary" id="compileit" value="Compiled">
-      <input type="button" class="btn btn-lg btn-primary" onclick="geturl()" value="Get Url">
+      <input type="button" class="btn btn-lg btn-primary fixed" id="compileit" value="Compiled">
+      <input type="button" class="btn btn-lg btn-primary fixed" onclick="geturl()" value="Get Url">
       <div id="alert-placeholder"></div>
     </div>
     <div class="row" id="textareas">
